[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/main/MainScene.gd" type="Script" id=1]
[ext_resource path="res://src/main/Game.tscn" type="PackedScene" id=2]
[ext_resource path="res://shook-hello-sky.wav" type="AudioStream" id=3]
[ext_resource path="res://src/InterfaceLayer/HUD/HUD.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Game" parent="." instance=ExtResource( 2 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="start" from="HUD" to="." method="_on_HUD_start"]
[connection signal="gameOver" from="Game" to="." method="_on_Game_gameOver"]
[connection signal="gameWin" from="Game" to="." method="_on_Game_gameWin"]
